# dist-array

./: README.md  pyproject.toml
dist_array/: __init__.py
dist_array/core/: protocol.py  serialize.py
test/: test_protocol.py  test_serialize.py
